fixes styles in carousel, and hero banner on ios

--- a/components/intvPartners/intvPartners.module.scss
+++ b/components/intvPartners/intvPartners.module.scss
@@ -103,6 +103,7 @@
     @media screen and (max-width: 100em) {
       left: -10%;
       width: 120%;
+      margin: 3em 0;
     }
     
     @media screen and (max-width: $sm) {
